--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="shortcut icon" href="https://i.ibb.co/hRht50QJ/icons8-movie-94.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/ae1526453f.js" crossorigin="anonymous"></script>
     <title>SS Movie Portal</title>
